@@ -1,0 +1,2 @@
+# this is used by some of the tests
+readonlyhost
